syntax.ebnf
/* Util Elements */
whitespace ::= "' '" | "\n" | "\t"

space ::= whitespace+

/* Document Elements */

HTMLCode ::= (Char - '<?')+ /* Any char up until <? */

PHPCode ::= "<?php" whitespace+ (Statement | BlockStatement) whitespace+ "?>"

PHPEcho ::= "<?=" whitespace* ExpressionStatement  whitespace* "?>"

TemplateElement ::= HTMLCode | PHPCode | PHPEcho

/* Expression Elements */

Identifier ::= "$" letter+

MemberExpression ::= Identifier ("[" (StringLiteral | NumberLiteral) "]")+

StringLiteral ::= '"' Char '"'

NumberLiteral ::= Digit ("." Digit+)?

ArrayExpression ::= "[" space ((Expression space "," space)* Expression)? space "]"

Property ::= (StringLiteral | NumberLiteral) space "=>" space Expression

ObjectExpresstion ::= "[" space ((Property space "," space)* Property)? space "]"

BinaryExpressionArgument ::= (NonBinaryExpresstion | "(" space Expresstion space ")")

BinaryExpression ::= BinaryExpressionArgument space ("==" | "|=" | "<" | "<=" | ">" | ">=") space BinaryExpressionArgument

Keyword ::= "False" | "True"

BooleanExpression ::= BinaryExpression |  Keyword

CallExpresstion ::= letter+ "(" space ((Expression space "," space)* Expression)? space ")"

Expression ::= "("? (BooleanExpression | StringLiteral | NumberLiteral | ArrayExpression | Identifier | CallExpresstion | MemberExpression ) ")"?

NonBinaryExpresstion ::= "("? (Keyword | StringLiteral | NumberLiteral | ArrayExpression | Identifier | CallExpresstion | MemberExpression ) ")"?

AssignmentExpression ::= Identifier space Expression

UpdateExpression ::= Identifier space ("++" | "--")

/* Statement Elements */

BlockStatement ::=  (Statement ";")+

IfStatement ::= "if" space "(" space BooleanExpression space ")" space ":" space "?>" TemplateElement+ ("<?php" sapce "else" space ":" space "?>" TemplateElement+)? "<?php" space "endif"

ForStatement ::= "for" space "(" space AssignmentExpression? space  ";" space BooleanExpression? space ";" space UpdateExpression? space ")" space ":" space "?>" TemplateElement+ "<?php" space "endfor"

ForEachStatement ::= "foreach" space "(" space (Identifier | ArrayExpression | ObjectExpresstion) space  "as" space Identifier space "=>" space Identifier space ")" space ":" space "?>" TemplateElement+ "<?php" space "endforeach"

BreakStatement ::= "break"

ContinueStatement ::= "continue"

IncludeStatement ::= "include" space StringLiteral

CallStatement ::= letter+ "(" space ((Expression space "," space)* Expression)? space ")" (";"?)

Statement ::= IfStatement | ForEachStatement | ForStatement | BreakStatement | ContinueStatement | IncludeStatement | CallStatement
